docs():regenerate swagger api docs
here re-arange swagger anotation and re-generate api documentation
